third_party/move/move-compiler-v2/tests/match-checks/range_unbounded_error.exp

Diagnostics:
error: unbounded range pattern `..` is not allowed; use `_` instead
  ┌─ tests/match-checks/range_unbounded_error.move:5:13
  │
5 │             .. => 1,
  │             ^^
